devide css into for PC and for SmartPhone

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
     <head>
         <title>構内バスアプリ</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="stylesheet" type="text/css" media="(max-width:600px)"  href="stylesheet_sp.css">
+        <link rel="stylesheet" type="text/css" media="(min-width:601px)"  href="stylesheet_pc.css">
+
 
     </head>
     <body>
@@ -17,6 +19,7 @@
 
     </header>
     <div id="app">
+    <div class="container">
         <div class="contents">
             <span class="box-title">次のバス</span>
             <div class="bus_situation_now">
@@ -69,7 +72,7 @@
             </div>
         </div>
 
-    
+    </div>
     </div>
     <div class="footer">
         
