Added link to favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <head>
         <title>構内バスアプリ</title>
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <link rel="stylesheet" type="text/css" media="(max-width:800px)"  href="stylesheet_sp.css">
         <link rel="stylesheet" type="text/css" media="(min-width:801px)"  href="stylesheet_pc.css">
 
