--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <head>
         <title>構内バスアプリ</title>
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
         <link rel="stylesheet" type="text/css" media="(max-width:800px)"  href="stylesheet_sp.css">
         <link rel="stylesheet" type="text/css" media="(min-width:801px)"  href="stylesheet_pc.css">
 
