Fixed image width typo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
              <div class="bus_crowd_fig">
 
-                <object id="bus_img" type="image/svg+xml" data="./image/bus.svg" widht="293px" height="216px"></object>
+                <object id="bus_img" type="image/svg+xml" data="./image/bus.svg" width="293px" height="216px"></object>
                 <div id="sitting_img">
                     <object id="sitting_specific" v-for= "i in 3"  type="image/svg+xml" data="./image/sitting.svg" height="88px"></object>
                 </div>
