--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="app">
-        <div class="page_innner">
+        <div class="page_inner">
             <header>
                 <div class="header_stop_name">
                     <p>{{ stop_selected }}</p>
